Fix profile alignment

--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -2,7 +2,7 @@
     color: white;
     margin-left: 30px;
     display: grid;
-    grid-template-columns: repeat(2, auto);
+    grid-template-columns: 294px 1fr;
     grid-template-rows: repeat(2, auto);
     grid-template-areas:
         "name edit-btn"
@@ -14,6 +14,11 @@
 
 @media (max-width: 880px) {
     .profile__info {
+        grid-template-columns: 1fr 189px 1fr;
+        grid-template-rows: repeat(3, auto);
+        grid-template-areas:
+        "space name edit-btn"
+        "status status status";
         margin-top: 26px;
         margin-left: 0;
         max-width: 282px;
