--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -15,7 +15,5 @@
     .profile__name {
         font-size: 27px;
         line-height: 33px;
-        margin-left: 25px;
-        max-width: calc(100% - 10px);
     }
 }
